--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     = javascript_include_tag :application
     = javascript_include_tag "vendor/modernizr"
 
-  %body{ body_attributes }
+  %body
     = render 'shared/flashes'
 
     %main
