Article model and controller

--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -1,1 +1,25 @@
 @import "foundation_and_overrides"
+
+#articles
+  h2
+    display: inline-block
+
+  form.article
+    position: relative
+    top: -8px
+    display: inline-block
+    margin-left: 15px
+
+    .input
+      display: inline-block
+
+    input
+      border-radius: 5px
+
+    input[type=text]
+      width: 300px
+
+    input[type=submit]
+      position: relative
+      top: 2px
+      padding: 9px
