--- a/app/views/snippets/show.html.haml
+++ b/app/views/snippets/show.html.haml
@@ -5,9 +5,22 @@
       = link_to "Edit", edit_snippet_path(@snippet.id)
 
   %h2 English
-
   %p.english= @snippet.english
 
   %h2 Icelandic
-
   %p.icelandic= @snippet.icelandic
+
+  %h2 Arabic
+  %p.arabic= @snippet.arabic
+
+  %h2 Filipino
+  %p.filipino= @snippet.filipino
+
+  %h2 Haitian Creole
+  %p.haitian-creole= @snippet.haitian_creole
+
+  %h2 Maltese
+  %p.maltese= @snippet.maltese
+
+  %h2 Yiddish
+  %p.yiddish= @snippet.yiddish
